# qt-learn

./: .gitignore  CMakeLists.txt  README.md  draft.cpp  main.cpp
include/modules/: ring.h
include/test/: draft.h
include/utils/: Timer.h
src/modules/: ring.cpp
src/test/: draft.cpp
src/utils/: Timer.cpp  Timer.h  event.cpp  event.h
